Feat: 배너, 브랜드 페이지 gif 적용
